fix overlap issues

--- a/src/app/pages/chauffeur-menu/chauffeur-menu.page.scss
+++ b/src/app/pages/chauffeur-menu/chauffeur-menu.page.scss
@@ -45,6 +45,10 @@
     background: #cce4e2;
     margin: 4% 0;
     display: flex;
+    img{
+        height: 12vh;
+        width: 12vh;
+    }
 }
 .img-container div {
     width: 100%;
