--- a/src/app/pages/chauffeur-menu2/chauffeur-menu2.page.scss
+++ b/src/app/pages/chauffeur-menu2/chauffeur-menu2.page.scss
@@ -8,7 +8,7 @@
 }
 .container {
     position: absolute;
-    width: 80%;
+    width: 90%;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
@@ -44,7 +44,11 @@
     text-align: center;
     background: #cce4e2;
     margin: 4% 0;
-    display: flex;
+   // display: flex;
+   img{
+       height: 9vh;
+       width: 9vh;
+   }
 }
 .img-container div {
     width: 100%;
