--- a/src/app/pages/directions/directions.page.scss
+++ b/src/app/pages/directions/directions.page.scss
@@ -1,6 +1,6 @@
 .logo {
   background: #fff;
-  width: 70%;
+  width: 90%;
   margin: 0 auto;
   border-bottom-left-radius: 16px;
   border-bottom-right-radius: 16px;
