--- a/src/app/pages/home/home.page.scss
+++ b/src/app/pages/home/home.page.scss
@@ -1,6 +1,6 @@
 .container {
   position: absolute;
-  width: 80%;
+  width: 90%;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
@@ -33,15 +33,13 @@
   padding: 3%;
 }
 .list-img {
-  width: 40%;
-  height: 40%;
-
+  width: 9vh;
+  height: 9vh;
   filter: invert(34%) sepia(58%) saturate(464%) hue-rotate(119deg) brightness(107%) contrast(136%);
 }
 .list-img2 {
-  width: 40%;
-  height: 40%;
-
+  width: 9vh;
+  height: 9vh;
   filter: invert(3%) sepia(124%) saturate(398%) hue-rotate(119deg) brightness(87%) contrast(88%);
 }
 span {
@@ -51,8 +49,6 @@ span {
 .title {
   padding-top: 2%;
   border-top: 1px solid #007871;
-  
-
 }
 
 @media only screen and (min-width: 1500px) {
