--- a/src/app/pages/languages/languages.page.scss
+++ b/src/app/pages/languages/languages.page.scss
@@ -1,6 +1,6 @@
 .container {
   position: absolute;
-  width: 80%;
+  width: 90%;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
@@ -54,7 +54,7 @@
 }
 
 .card-content {
-  height: 50vh;
+  height: 43vh;
   overflow-y: scroll;
 }
 
